--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -24,5 +24,7 @@
     width: 110%;
     height: 100%;
     object-fit: cover;
+    /* transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem); */
+
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1),rgba(0,0,0,0));
   }
